# BarByBar

./: .gitignore  BarByBar.spec  README.md  pyproject.toml  todo.txt
.github/workflows/: package.yml  release.yml
.pytest-temp/000c62f1883f4b5a94362e1b31f965ea/: barbybar.db
.pytest-temp/000e32acca53478ba074977e73b8d0fa/: barbybar.db
.pytest-temp/00180b3e444a4190baef85885dcbcc7f/: barbybar.db
.pytest-temp/002b9a187b224f0cb0f4a555c546f863/: import.db
.pytest-temp/0059ea3d2eab415c83ede0a987aec83d/: barbybar.db
.pytest-temp/007094a055624eec9fc3c8e846373b3f/: barbybar.db
.pytest-temp/008e29faa51e493a977e4558d3795421/: barbybar.db
.pytest-temp/00a21dfd9cd840de91241bbc52c51cff/: barbybar.db
.pytest-temp/00b8c3a053a549fab94ea9e1e5e50c73/: barbybar.db
.pytest-temp/00be79681caa409b852b33dd9ea56253/: barbybar.db
.pytest-temp/00bebb59a3004a20a6dfe1e9a52b6b96/: barbybar.db
.pytest-temp/00d6f25f634a4525a45ccb08c1f77126/: barbybar.db
data/: barbybar.db
docs/: desktop-client-fastapi-server-plan.md  performance_diagnostics.md  trade_history_review.md  web-migration-single-user-plan.md
installer/: BarByBar.iss  BarByBar.wxs
sample_data/: if_sample.csv
scripts/: build_installer.ps1  build_release.ps1  generate_release_notes.py  publish_release.ps1
tests/: test_async_tasks.py  test_chart_widget.py  test_csv_importer.py  test_engine.py  test_logging_config.py  test_main_window.py  test_paths.py  test_performance_metrics.py  test_publish_release_script.py  test_release_notes.py  test_repository.py  test_trade_history.py  test_update_service.py
(+3025 files in other folders)
