[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barbybar"
version = "0.1.0"
description = "Windows desktop bar-by-bar review trainer for futures minute data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "pyqtgraph>=0.13.7",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
