[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barbybar"
dynamic = ["version"]
description = "Windows desktop bar-by-bar review trainer for futures minute data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.2",
  "PySide6>=6.8",
  "pyqtgraph>=0.13.7",
]

[tool.setuptools.dynamic]
version = { attr = "barbybar.__version__" }

[dependency-groups]
dev = [
  "pytest>=8.3",
]
release = [
  "pyinstaller>=6.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
